--- a/SvcAnalysisOrchestrator.csproj
+++ b/SvcAnalysisOrchestrator.csproj
@@ -1,8 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk.Worker">
 
   <PropertyGroup>
-    <RootNamespace>Trackunit.Svc.AnalysisOrchestrator</RootNamespace>
-    <AssemblyName>Trackunit.Svc.AnalysisOrchestrator</AssemblyName>
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
@@ -19,6 +17,7 @@
     <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.8" />
     <PackageReference Include="RabbitMQ.Client" Version="7.1.2" />
     <PackageReference Include="AspNetCore.HealthChecks.Rabbitmq" Version="9.0.0" />
+    <PackageReference Include="Trackunit.Messaging" />
   </ItemGroup>
   
 </Project>
