--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,44 +1,40 @@
-name: CI (build & push image)
+name: Build and Publish Image
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
 
 env:
   IMAGE_REGISTRY: ghcr.io
-  IMAGE_NAME: svc-analysis-orchestrator
+  IMAGE_NAME: ${{ github.repository }}
 
 permissions:
   contents: read
-  packages: write # needed to push to ghcr
+  packages: write
 
 jobs:
-  build-push:
+  build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
       
-      - name: Set lowercase owner
-        run: echo "OWNER_LC=${GITHUB_REPOSITORY_OWNER,,}" >> $GITHUB_ENV
+      - name: Set lowercase image name
+        run: echo "IMAGE_NAME_LC=${IMAGE_NAME,,}" >> $GITHUB_ENV
 
-      - name: Log in to GHCR
+      - name: Login to GHCR
         uses: docker/login-action@v3
         with:
           registry: ${{ env.IMAGE_REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-                
-      - name: Build & push image
+
+      - name: Build and push
         uses: docker/build-push-action@v6
         with:
           context: .
-          file: ./Dockerfile
           push: true
-          build-args: |
-            GH_OWNER=${{ env.OWNER_LC }}
-            GH_USER=${{ github.actor }}
-            GH_TOKEN=${{ secrets.GITHUB_TOKEN }}
           tags: |
-              ${{ env.IMAGE_REGISTRY }}/${{ env.OWNER_LC }}/${{ env.IMAGE_NAME }}:latest
+            ${{ env.IMAGE_REGISTRY }}/${{ env.IMAGE_NAME_LC }}:latest
+            ${{ env.IMAGE_REGISTRY }}/${{ env.IMAGE_NAME_LC }}:${{ github.run_number }}
